# secugate

./: .gitignore  README.ko.md  README.md  main.py  pyproject.toml
CI_Gate_Example/: iac-gate_example.yml
CI_Gate_Example/scenarios/: README.md
CI_Gate_Example/scenarios/chained_ec2_iam_s3/: main.tf
CI_Gate_Example/scenarios/iam_admin/: main.tf
CI_Gate_Example/scenarios/public_s3/: main.tf
artifacts/: attack_graph.json  attack_scenarios.json  attack_scenarios.md  checkov_hcl.json  checkov_merged.json  checkov_plan.json  checkov_tf.json  iac_graph.json  iac_graph_checkov_paths.json  iac_graph_checkov_paths.md  iac_graph_compat.json  tfplan.json
artifacts/.cache/a9c8646ee68248d82577cb0b6c8200f27430452baaafa0e8a0e76e1aedcc0d22/: checkov_hcl.json  checkov_merged.json  checkov_plan.json
check_env/: pyvenv.cfg
scripts/: gate_attack_scenarios.py  map_checkov_to_iac_paths.py  tfplan_attack_graph.py  tfplan_iac_graph.py
src/secgate/: cli.py  map_vectors.py  pipeline.py
src/secgate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/secgate/parsers/: checkov.py  test_checkov.py
src/secugate/: __main__.py  attack_scenarios.py  cli.py  map_vectors.py  models.py  pipeline.py  validate_fail_examples.py
src/secugate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/secugate/parsers/: checkov.py
src/secugate/rules/: attack_mapping.json  checkov_fail_condition.json  checkov_id_catalog.json  checkov_id_scenarios.json  checkov_korean_labels.json  resource_classification.json  rule_catalog.json  weakness_catalog.json
templates/: iac-gate.yml
(+5 files in other folders)
