[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name ="secugate"
version="0.1.0"
requires-python = ">=3.10"
dependencies = [
  "checkov>=3.0.0,<4.0.0",
  "typer>=0.9.0,<1.0.0",
]


[project.scripts]
secugate = "secugate.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secugate = ["rules/*.json"]
